<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gray">

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/phone10"
        android:layout_gravity="center"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/profile"
        android:text="@string/profile"
        android:textSize="30sp"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/messages"
        android:text="@string/messages"
        android:textSize="30sp"/>


    <Button
        style="@style/ButtonStyle"
        android:id="@+id/contacts"
        android:text="@string/contacts"
        android:textSize="30sp"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/settings"
        android:text="@string/settings"
        android:textSize="30sp"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/about_program"
        android:text="@string/about_program"
        android:textSize="30sp"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/exit"
        android:text="@string/exit"
        android:textSize="30sp"/>

</LinearLayout>
