<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edit_phone_number"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:hint="@string/enter_phone"
        android:inputType="phone" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="156dp"
        android:text="@string/get_code"
        />

    <EditText
        android:id="@+id/edit_verify_code"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="199dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_code" />

    <Button
        android:id="@+id/button_verify"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:text="@string/confirm"
        />
</RelativeLayout>