<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/airat" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:text="@string/info"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/phone"
        android:layout_alignStart="@+id/phone"
        android:layout_below="@id/info"
        android:layout_marginTop="20dp"
        android:text="@string/phone"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_below="@id/phone_label"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/name"
        android:layout_alignStart="@+id/name"
        android:layout_below="@id/phone"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_below="@id/name_label"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/login"
        android:layout_alignStart="@+id/login"
        android:layout_below="@id/name"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/login"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_below="@+id/login_label"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/changeData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/change_data" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/changeData"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/exit_profile" />

</RelativeLayout>