<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputPhone"
        style="@style/TextInputLayoutStyle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp">

        <EditText
            android:id="@+id/input_phone"
            style="@style/EditTextStyle"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:hint="@string/phone"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/conSearch"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/search" />

    <ImageView
        android:contentDescription="@string/add_photo"
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp"
        android:foregroundGravity="center_vertical" />

    <TextView
        android:id="@+id/conName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/conLogin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="112dp" />

    <TextView
        android:id="@+id/conPhone"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>


    <Button
        android:id="@+id/addContact"
        style="@style/ButtonStyle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="194dp"
        android:text="@string/add_contact"
        android:textSize="30sp" />

</RelativeLayout>